<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Power Curosor BlueTooth</string>

    <!--  BluetoothActivity -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="experiment_powercursor">set experiment power cursor value</string>
    <string name="init">init positions</string>
    <string name="goNext">try next</string>
    <string name="phaseNext">phase next</string>
    <string name="controllKey">Controll Key Buttons</string>
    <string name="exit">exit</string>
    
    <!-- experiment power cursor -->
    <string name="param">param: </string>
    <string name="zero">0</string>
    <string name="dummy"></string>
    <string name="button_ok">OK</string>
    
    <!-- Main View -->
    <string name="your_name">氏名</string>
    <string name="your_sex">性別</string>
    <string name="your_age">年齢</string>
    <string name="receiver">Run as Receiver</string>
    <string name="sender">Run as Sender</string>
    
</resources>
