<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_sex"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <AutoCompleteTextView
                android:id="@+id/sexText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_age"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/ageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

        </LinearLayout>
		<TextView
                android:id="@+id/margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
		
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/RunSender"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.34"
                android:textSize="30dp"
                android:textColor="@color/TextGreen"
                android:text="@string/sender" />
            
            <TextView
                android:id="@+id/margin"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.34"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />
            
            <Button
                android:id="@+id/RunReceiver"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_weight="0.34"
                android:textSize="30dp"
                android:textColor="@color/TextRed"
                android:text="@string/receiver" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>